# overlord-python

./: .env.example  .gitignore  CODE_INTELLIGENCE.md  CODE_INTELLIGENCE_QUICKSTART.md  CONTRIBUTING.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
examples/: code_intelligence_demo.py
overlord/: __init__.py  config.py  main.py
overlord/code_intelligence/: __init__.py  enhanced_blast_radius.py  graph_builder.py  mcp_server.py  parsers.py
overlord/mcp_servers/: github_orchestrator.py  impact_analyzer.py  plan_decomposer.py  task_generator.py
overlord/models/: __init__.py  blast_radius.py  plan.py  story.py  task.py
tests/: test_blast_radius.py
